# esp32-rust-freeRTOS

./: Cargo.toml  helper.sh  server.py
src/: esp32.rs
