[package]
name = "esp32"
version = "0.1.0"
authors = ["hnoj <mrocznaklawiatura@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32"
path = "src/esp32.rs"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
esp-idf-sys = { version = "0.35.0", features = ["binstart"] }
esp-idf-hal = { version = "0.44.1" }
anyhow = "1.0"
embedded-hal = { version = "1.0.0" }
heapless = "0.8"
rand = "0.8.5"

[build-dependencies]
embuild = "0.32.0"